--- a/src/br/com/wss/viwer/FrmAuterarSenha.form
+++ b/src/br/com/wss/viwer/FrmAuterarSenha.form
@@ -41,7 +41,7 @@
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                          <Component id="jTextField1" alignment="0" max="32767" attributes="0"/>
+                          <Component id="jTextFieldUsuario" alignment="0" max="32767" attributes="0"/>
                           <Component id="jPasswordField1" alignment="0" max="32767" attributes="0"/>
                           <Component id="jPasswordField2" alignment="0" max="32767" attributes="0"/>
                           <Component id="jPasswordField3" alignment="0" min="-2" pref="124" max="-2" attributes="0"/>
@@ -59,7 +59,7 @@
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="jLabel2" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="jTextField1" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="jTextFieldUsuario" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
@@ -92,7 +92,7 @@
         <Property name="text" type="java.lang.String" value="Confirme Senha:"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JTextField" name="jTextField1">
+    <Component class="javax.swing.JTextField" name="jTextFieldUsuario">
       <Properties>
         <Property name="enabled" type="boolean" value="false"/>
       </Properties>
