--- a/src/br/com/wss/viwer/FrmBloqueio.form
+++ b/src/br/com/wss/viwer/FrmBloqueio.form
@@ -104,7 +104,7 @@
     <Component class="javax.swing.JLabel" name="jLImg">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/Img/telaBloqueio.jpg"/>
+          <Image iconType="3" name="/br/com/wss/img/telaBloqueio.jpg"/>
         </Property>
         <Property name="text" type="java.lang.String" value="jLabel2"/>
       </Properties>
