alteração dos SQL, feito cadastro de fornecedor

--- a/src/br/com/wss/viwer/FrmGrupoBens.form
+++ b/src/br/com/wss/viwer/FrmGrupoBens.form
@@ -9,6 +9,7 @@
     </Property>
     <Property name="closable" type="boolean" value="true"/>
     <Property name="iconifiable" type="boolean" value="true"/>
+    <Property name="title" type="java.lang.String" value="Cadastro de Grupo"/>
     <Property name="enabled" type="boolean" value="false"/>
   </Properties>
   <SyntheticProperties>
