--- a/src/br/com/wss/viwer/FrmComputador.form
+++ b/src/br/com/wss/viwer/FrmComputador.form
@@ -9,6 +9,8 @@
     </Property>
     <Property name="closable" type="boolean" value="true"/>
     <Property name="iconifiable" type="boolean" value="true"/>
+    <Property name="title" type="java.lang.String" value="Cadastro Computador"/>
+    <Property name="toolTipText" type="java.lang.String" value=""/>
     <Property name="enabled" type="boolean" value="false"/>
   </Properties>
   <SyntheticProperties>
