--- a/src/br/com/wss/viwer/FrmUsuario.form
+++ b/src/br/com/wss/viwer/FrmUsuario.form
@@ -5,9 +5,6 @@
     <Component class="javax.swing.ButtonGroup" name="rBStatus">
     </Component>
     <Component class="org.netbeans.examples.lib.timerbean.Timer" name="timer1">
-      <Events>
-        <EventHandler event="onTime" listener="org.netbeans.examples.lib.timerbean.TimerListener" parameters="java.awt.event.ActionEvent" handler="timer1OnTime"/>
-      </Events>
     </Component>
   </NonVisualComponents>
   <Properties>
@@ -18,6 +15,7 @@
     </Property>
     <Property name="closable" type="boolean" value="true"/>
     <Property name="iconifiable" type="boolean" value="true"/>
+    <Property name="title" type="java.lang.String" value="Cadastro de Us&#xfa;ario"/>
     <Property name="enabled" type="boolean" value="false"/>
   </Properties>
   <SyntheticProperties>
